<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.crodriguez.smartpool.activities.LoginActivity">

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_google"
        android:layout_width="150dp"
        android:layout_height="34dp"
        android:layout_marginBottom="45dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/btn_facebook"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="40dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_google"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="298dp"
        android:layout_height="225dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@mipmap/ic_launcher_foreground"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <AutoCompleteTextView
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="35dp"
            android:hint="@string/prompt_email"
            android:imeActionId="1"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@+id/edt_pass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/nlc_olvidarpass"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <EditText
            android:id="@+id/edt_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="35dp"
            android:hint="@string/prompt_password"
            android:imeActionId="2"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_iniciosesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:background="@drawable/btn_seletor"
        android:text="@string/action_sign_in"
        android:textColor="@drawable/text_color_selector"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/nlc_newaccount"
        android:layout_width="100dp"
        android:layout_height="19dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="40dp"
        android:text="@string/action_new_account"
        app:layout_constraintBottom_toTopOf="@+id/btn_iniciosesion"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/nlc_olvidarpass"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="8dp"
        android:text="@string/forgot_password"
        app:layout_constraintBottom_toTopOf="@+id/btn_iniciosesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@+id/nlc_newaccount"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/conectaCon"
        app:layout_constraintBottom_toTopOf="@+id/btn_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txt_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/copyright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
