<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dimen10">

        <TextView
            android:id="@+id/txttemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/temperature"
            android:textSize="25sp"
            android:textColor="@color/colorBlueLogo"
            android:textStyle="bold" />

        <com.github.mikephil.charting.charts.LineChart
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:id="@+id/lineChart"/>

        <TextView
            android:id="@+id/textph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/ph"
            android:textSize="25sp"
            android:textColor="@color/colorBlueLogo"
            android:textStyle="bold" />

        <com.github.mikephil.charting.charts.LineChart
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:id="@+id/lineChart1"/>
        <TextView
            android:id="@+id/textturbi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/turbidity"
            android:textSize="25sp"
            android:textColor="@color/colorBlueLogo"
            android:textStyle="bold" />

        <com.github.mikephil.charting.charts.LineChart
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:id="@+id/lineChart2"/>
    </LinearLayout>

</ScrollView>