<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/gray_bg_color"
    android:orientation="vertical"
    tools:context="com.crodriguez.smartpool.activities.DevicePanelActivity">

    <LinearLayout
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textStyle="bold"
            android:textColor="@color/colorBlueLogo"
            android:layout_gravity="center|center_horizontal"
            android:text="Test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            />
        <LinearLayout
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@color/text_color"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:text="@string/temperature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvTemperature"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:text="--"
                android:textDirection="firstStrongRtl"
                android:textColor="@color/colorBlueLogo"
                android:textStyle="bold" />
            <ProgressBar
                android:layout_gravity="center"
                android:layout_width="@dimen/progresbarPanel"
                android:layout_height="@dimen/progresbarPanel"
                android:progressTint="@color/colorBlueLogo"
                android:visibility="gone"
                android:id="@+id/progTemp" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_ph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@color/text_color"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:text="@string/ph"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvPh"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:text="--"
                android:textDirection="firstStrongRtl"
                android:textColor="@color/colorBlueLogo"
                android:textStyle="bold" />

            <ProgressBar
                android:layout_gravity="center"
                android:layout_width="@dimen/progresbarPanel"
                android:layout_height="@dimen/progresbarPanel"
                android:progressTint="@color/colorBlueLogo"
                android:visibility="gone"
                android:id="@+id/progPh" />


        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_turbidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@color/text_color"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:text="@string/turbidity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvTurbidity"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:text="--"
                android:textDirection="firstStrongRtl"
                android:textColor="@color/colorBlueLogo"
                android:textStyle="bold" />
            <ProgressBar
                android:layout_gravity="center"
                android:layout_width="@dimen/progresbarPanel"
                android:layout_height="@dimen/progresbarPanel"
                android:progressTint="@color/colorBlueLogo"
                android:visibility="gone"
                android:id="@+id/progTurbi" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_chlorine_meter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@color/text_color"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:text="@string/chlorine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvChlorine"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:text="--"
                android:textDirection="firstStrongRtl"
                android:textColor="@color/colorBlueLogo"
                android:textStyle="bold" />
            <ProgressBar
                android:layout_gravity="center"
                android:layout_width="@dimen/progresbarPanel"
                android:layout_height="@dimen/progresbarPanel"
                android:progressTint="@color/colorBlueLogo"
                android:visibility="gone"
                android:id="@+id/progChlorine" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_calclock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:text="@string/date"
                android:textColor="@color/text_color" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:text="--"
                android:textDirection="firstStrongRtl"
                android:textColor="@color/colorBlueLogo"
                android:textStyle="bold" />
            <ProgressBar
                android:layout_gravity="center"
                android:layout_width="@dimen/progresbarPanel"
                android:layout_height="@dimen/progresbarPanel"
                android:progressTint="@color/colorBlueLogo"
                android:visibility="gone"
                android:id="@+id/progDate" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:background="@color/colorWhite"
        android:layout_marginTop="32dp"
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textStyle="bold"
            android:textColor="@color/colorBlueLogo"
            android:layout_gravity="center|center_horizontal"
            android:text="Mantenimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:textColor="@color/text_color"
                android:layout_gravity="center"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="20dp"
                android:text="Cl  "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progressTint="@color/colorBlueLogo"
                style="?android:attr/progressBarStyleHorizontal"
                android:max="256"
                android:progress="128"
                android:id="@+id/pbX" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:textColor="@color/text_color"
                android:layout_gravity="center"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="20dp"
                android:text="Alg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progressTint="@color/colorBlueLogo"
                style="?android:attr/progressBarStyleHorizontal"
                android:max="256"
                android:progress="128"
                android:id="@+id/pbY" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:textColor="@color/text_color"
                android:layout_gravity="center"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="20dp"
                android:text="+ph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/progressBarStyleHorizontal"
                android:progressTint="@color/colorBlueLogo"
                android:max="256"
                android:progress="128"
                android:id="@+id/pbZ" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>

